---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DuplicateKey]: the key `taste` is defined multiple times in table at `fruit.apple`
  ┌─ table_9_reverse_invalid:6:7
  │
2 │ [fruit.apple.taste]  # INVALID
  │              ----- first key instance
  ·
6 │ apple.taste.sweet = true
  │       ^^^^^ duplicate key


error: the key `taste` is defined multiple times in table at `fruit.apple`
 --> table_9_reverse_invalid:6:7
  |
2 | [fruit.apple.taste]  # INVALID
  |              ----- first key instance
...
6 | apple.taste.sweet = true
  |       ^^^^^ duplicate key
Error {
    kind: "DuplicateKey",
    message: "duplicate key",
    span: 93..98,
    path: Some(
        "fruit.apple.taste",
    ),
}
